--- a/_data/external_links.yml
+++ b/_data/external_links.yml
@@ -12,21 +12,21 @@
     url: "https://www.khanacademy.org/mission/algebra-basics"
     badge: true
   docs:
-  -
-    category: "Number Power 2"
-    excerpt: "Fractions, Decimals, and Percents"
-    cover_image: "np-2.jpeg"
-    url: "https://drive.google.com/open?id=0B3qyIxugPt-kd2N0X253Y0hONGc"
-  -
-    category: "Number Power 3"
-    excerpt: "Algebra: Signed Numbers, Powers and Roots, Algebraic Expressions and Formulas, One-Step Equations, Multi-Step Equations, Special Equations, Graphing Equations, Inequalities, Polynomials, and Factoring"
-    cover_image: "np-3.jpeg"
-    url: "https://drive.google.com/open?id=0B3qyIxugPt-kODdtMk5wTWF6Vkk"
-  -
-    category: "Number Power 4"
-    excerpt: "Geometry: Angles, Triangles, Perimeter, Area, and Volume"
-    cover_image: "np-4.jpeg"
-    url: "https://drive.google.com/open?id=0B3qyIxugPt-ka1NXS1ZSYi1RRlU"
+  # -
+    # category: "Number Power 2"
+    # excerpt: "Fractions, Decimals, and Percents"
+    # cover_image: "np-2.jpeg"
+    # url: "https://drive.google.com/open?id=0B3qyIxugPt-kd2N0X253Y0hONGc"
+  # -
+    # category: "Number Power 3"
+    # excerpt: "Algebra: Signed Numbers, Powers and Roots, Algebraic Expressions and Formulas, One-Step Equations, Multi-Step Equations, Special Equations, Graphing Equations, Inequalities, Polynomials, and Factoring"
+    # cover_image: "np-3.jpeg"
+    # url: "https://drive.google.com/open?id=0B3qyIxugPt-kODdtMk5wTWF6Vkk"
+  # -
+    # category: "Number Power 4"
+    # excerpt: "Geometry: Angles, Triangles, Perimeter, Area, and Volume"
+    # cover_image: "np-4.jpeg"
+    # url: "https://drive.google.com/open?id=0B3qyIxugPt-ka1NXS1ZSYi1RRlU"
   -
     category: "Sixth-Grade Math Minutes"
     excerpt: "*One Hundred Minutes to Better Basic Skills:* The focus of Sixth-Grade Math Minutes is math fluency—teaching students to solve problems effortlessly and rapidly. The problems in this book provide students with practice in every key area of sixth-grade math instruction, including: computation, number sense, reading graphs, problem solving, patterns and sequences, data analysis and probability, spatial reasoning, fractions, algebra and functions, geometry."
@@ -111,9 +111,9 @@
     avatar: learning_library_avatar.jpg
     url: "http://www.learningexpresshub.com/productengine/LELIndex.html#/adult-learning-center/resources/improve-your-writing-speaking-and-grammar/writing-and-grammar-skills-practice-sets/grammar"
     badge: true
-  docs:
-  -
-    category: "Daily Grams"
-    excerpt: "The purpose of Daily Grams: Guided Review Aiding Mastery Skills - Junior High/Senior High is to provide students with daily review of their language. Review of concepts helps to promote mastery learning."
-    cover_image: "daily-grams-2014.png"
-    url: "https://drive.google.com/open?id=0B3qyIxugPt-kOFVCOXN4WHJwYms"
+  # docs:
+  # -
+    # category: "Daily Grams"
+    # excerpt: "The purpose of Daily Grams: Guided Review Aiding Mastery Skills - Junior High/Senior High is to provide students with daily review of their language. Review of concepts helps to promote mastery learning."
+    # cover_image: "daily-grams-2014.png"
+    # url: "https://drive.google.com/open?id=0B3qyIxugPt-kOFVCOXN4WHJwYms"
